[package]
name = "nexus-cog-patterns"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Pattern library: builtin patterns, matcher, relevance scorer"
license = "Apache-2.0"
repository = "https://github.com/nexus-cognitive-tech/nexus-cog-patterns"
homepage = "https://github.com/nexus-cognitive-tech"
authors = ["Nexus Cognitive Technologies"]
keywords = ["cognition", "agent"]
categories = ["data-structures", "development-tools"]
readme = "README.md"

[dependencies]
nexus-cog-core = { path = "../nexus-cog-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
indexmap = { version = "2", features = ["serde"] }


parking_lot = "0.12"
[dev-dependencies]
